tests/failed/04-excepted-endian-identifier.stderr
error: unexpected end of input, expected identifier
 --> $DIR/04-excepted-endian-identifier.rs:4:10
  |
4 | #[endian()]
  |          ^
