tests/failed/04-excepted-endian-identifier.rs
use endiannezz::Io;

#[derive(Io)]
#[endian()]
struct Foo;

fn main() {}
